--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,4 @@
-@import url(<style>@importurl("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");</style>);
-* {
-  font-family: "Roboto", sans-serif;
-}
-.a {
+a {
   text-decoration: none;
   color: currentColor;
 }
@@ -12,29 +8,18 @@
   --font-color: var(rgba(33, 150, 243, 1));
   --font2-color: var(rgba(117, 117, 117, 1));
   --button: var(rgba(33, 150, 243, 1));
-  display: flex;
 }
-.container{
+.container {
   width: 1200px;
-margin-left: 200px;
+  margin: 0 auto;
 }
 
 .top {
   display: flex;
   align-items: center;
-  background: rgba(255, 255, 255, 1));
   height: 80px;
   flex-shrink: 0;
-  }
-.nav {
-  display: flex;
-
 }
-
-.logo {
-  display: flex;
-  padding-left: 215px;
-    }
 
 .logo {
   color: rgb(33, 150, 243);
@@ -48,7 +33,6 @@ margin-left: 200px;
 }
 
 .top_navigation {
-  display: flex;
   column-gap: 16px;
   align-items: center;
   color: var(--primary-color);
@@ -57,14 +41,15 @@ margin-left: 200px;
   font-style: normal;
   font-weight: 500;
 }
+.top_navigation {
+  display: flex;
+  list-style: none;
+  padding-left: 93px;
+  gap: 50px;
+}
 
 .top_navigation .link:hover {
   color: rgba(33, 150, 243, 1);
-}
-.top_navigation {
-  list-style: none;
-  column-gap: 50px;
-  
 }
 
 .inf_navigation .link {
@@ -81,49 +66,21 @@ margin-left: 200px;
 .inf_navigation .link:hover {
   color: rgba(33, 150, 243, 1);
 }
-.inf_navigation .inf{
-  display: inline-block;
-    margin-left: 50px;
+.inf_navigation {
+  display: flex;
+  list-style: none;
+  padding-left: 344px;
+  gap: 50px;
 }
-
 .portfolio {
   display: flex;
-  display: inline-block;
-  height: 1480px;
-    
-}
- 
-.port_menu {
-  display: flex;
-  display: inline-block;
- gap: 8px;
-  
-}
-
-.main_portfolio {
-  display: flex;
-  list-style: none;
-  align-items: center;
-  display: inline-block;
-  gap: 32px;
-  padding-left: 400px;
-  padding-top: 106px;
-  padding-bottom: 50px;
-
- }
-
-.port_img {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 20px;
-  list-style: none;
-   
+  height: 1880px;
+  position: relative;
 }
 
 .main_portfolio .link {
-  background-color: rgba(33, 150, 243, 1);
-  color: rgba(255, 255, 255, 1);
+  background-color: rgba(245, 244, 250, 1);
+  color: rgba(33, 33, 33, 1);
   text-align: center;
   font-family: Roboto;
   font-size: 16px;
@@ -131,48 +88,57 @@ margin-left: 200px;
   font-weight: 500;
   line-height: 1.625;
   letter-spacing: 0.48px;
+  cursor: pointer;
 }
 
 .main_portfolio .link:hover {
   background-color: rgb(2, 92, 165);
 }
 
-.hero {
+.main_portfolio {
+  display: flex;
+  list-style: none;
+  gap: 8px;
+  padding-top: 106px;
+  padding-left: 430px;
+  position: absolute;
+}
+
+.port_img {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
+  list-style: none;
+  padding-top: 194px;
+  gap: 20px;
+}
+
+.card_port {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: rgba(238, 238, 238, 1);
+  border-radius: 4px;
+  border: 1px;
+}
+.hero {
+  display: flex;
   height: 600px;
   flex-shrink: 0;
   background-color: black;
-  position: relative;
 }
-
-.hero_title {
-  color: rgb(255, 255, 255);
-  text-align: center;
-  font-family: Roboto;
-  font-size: 44px;
-  font-style: normal;
-  font-weight: 900;
-  line-height: 1.363;
-  letter-spacing: 2.64px;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-
 .hero_title {
   display: flex;
-  align-items: center;
-  padding-left: 248px;
-  padding-right: 256px;
-  padding-top: 400;
-  padding-bottom: 280px;
-
+  justify-content: center;
+  font-family: Roboto;
+  font-weight: 900;
+  font-size: 32px;
+  color: rgba(255, 255, 255, 1);
+  padding-left: 420px;
+  padding-top: 200px;
 }
 
 .button_contact {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 261px;
   height: 50px;
   top: 430px;
@@ -181,9 +147,16 @@ margin-left: 200px;
   padding: 10px 32px 10px 32px;
   gap: 10px;
   background-color: rgba(33, 150, 243, 1);
-  position: absolute;
   cursor: pointer;
 }
+.button_contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 450px;
+  margin-bottom: 450px;
+}
+
 .hero .button_contact:hover {
   background-color: blue;
 }
@@ -192,14 +165,12 @@ margin-left: 200px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  
 }
 .services {
   display: flex;
   display: block;
   justify-content: center;
   width: 270px;
-  
 }
 
 h3 {
@@ -208,7 +179,7 @@ h3 {
   color: var(--primary-color);
   font-family: Roboto;
   font-size: 14px;
-  font-style: normal;cont
+  font-style: normal;
   font-weight: 700;
   line-height: normal;
   letter-spacing: 0.42px;
@@ -251,12 +222,28 @@ h3 {
   line-height: normal;
   letter-spacing: 1.08px;
 }
- .team_list  {
+.team .container {
   display: flex;
-   list-style: none;
-    gap: 30px;
-   align-items: center;
- }
+  height: 708px;
+}
+
+.team {
+  background-color: rgba(245, 244, 250, 1);
+}
+
+.team_list {
+  display: flex;
+  list-style: none;
+  gap: 30px;
+}
+.card_team {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.04);
+  border-radius: 0px, 0px, 4px, 4px;
+  border: 0cap;
+}
 
 .footer_navigation {
   list-style: none;
@@ -276,20 +263,16 @@ h3 {
 .footer_navigation .link:hover {
   color: rgba(33, 150, 243, 1);
 }
-.footer{
+.footer {
   display: flex;
   align-items: center;
   height: 252px;
   background-color: black;
 }
 
-.footer_navigation{
+.footer_navigation {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   width: 231px;
-  height: 200px;
 }
-
-
-
