--- a/css/styles.css
+++ b/css/styles.css
@@ -21,11 +21,17 @@ ul {
   list-style: none;
 }
 
+.header {
+  display: flex;
+  align-items: center;
+  height: 80px;
+  border-bottom: 1px solid rgba(236, 236, 236, 1);
+}
+
 .top {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 80px;
   flex-shrink: 0;
 }
 
@@ -115,6 +121,7 @@ ul {
   border: none;
   padding: 6px 24px;
   border-radius: 4px;
+  background-color: rgba(245, 244, 250, 1);
 }
 
 .filter_button:hover {
@@ -142,11 +149,21 @@ ul {
   text-align: center;
   background-color: rgba(238, 238, 238, 1);
   border-radius: 4px;
-  border: 1px;
-  box-shadow: rgba(0, 0, 0, 0.16);
+  border: 0px solid;
+  box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16),
+    0px 4px 4px 0px rgba(0, 0, 0, 0.06);
+  cursor: pointer;
 }
 .card_port {
   flex-basis: calc((100% - 60px) / 3);
+}
+
+.card_port :hover {
+  box-shadow: 1px 4px 6px 0 rgba(0, 0, 0, 0.16);
+}
+
+.item {
+  background-color: var(--color_white);
 }
 
 .principal {
@@ -155,8 +172,11 @@ ul {
   align-items: center;
   justify-content: center;
   height: 600px;
+}
+.hero {
   background-color: rgba(47, 48, 58, 1);
 }
+
 .hero_title {
   font-family: Roboto;
   font-weight: 900;
@@ -182,6 +202,7 @@ ul {
   flex-direction: row;
   align-items: center;
   list-style: none;
+  padding-top: 95px;
 }
 
 h3 {
@@ -214,6 +235,7 @@ h3 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-bottom: 95px;
 }
 
 .about_img {
@@ -236,13 +258,23 @@ h3 {
   letter-spacing: 1.08px;
 }
 
+.our_services {
+  padding-top: 95px;
+  padding-bottom: 95px;
+}
+
+.our_team {
+  display: flex;
+  align-items: center;
+  height: 648px;
+  background-color: rgba(245, 244, 250, 1);
+}
+
 .team {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 648px;
-  background-color: rgba(245, 244, 250, 1);
 }
 
 .team_list {
@@ -256,9 +288,10 @@ h3 {
   display: flex;
   flex-direction: column;
   text-align: center;
-  background-color: rgba(0, 0, 0, 0.04);
+  background-color: var(--color_white);
   border-radius: 0px, 0px, 4px, 4px;
-  border: 0cap;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 2px 1px 0 rgba(0, 0, 0, 0.2);
 }
 
 .footer_navigation {
@@ -283,9 +316,24 @@ h3 {
 
 .footer {
   display: flex;
-  justify-content: start;
-  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
   height: 252px;
+}
+
+.logo_footer {
+  color: var(--color_hover);
+  text-align: right;
+  font-family: Raleway;
+  font-size: 26px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.78px;
+}
+
+.footer_section {
   background-color: rgba(47, 48, 58, 1);
   padding-left: 40px;
 }
@@ -294,5 +342,6 @@ h3 {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+  justify-content: start;
   width: 231px;
 }
